<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/player"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_audiotrack"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist"
            android:title="@string/playlist" />
        <item
            android:id="@+id/nav_song"
            android:icon="@drawable/ic_audiotrack"
            android:title="@string/allSong" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_album"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_artist"
            android:title="@string/artist" />
    </group>
    <group
        android:id="@+id/setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_equalizer"
            android:icon="@drawable/ic_equalizer"
            android:title="@string/equaliser" />
    </group>
</menu>