<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_remove_from_playlist"
        android:orderInCategory="100"
        android:title="@string/removeFromPlaylist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nav_album"
        android:orderInCategory="100"
        android:title="@string/toAlbum"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nav_artist"
        android:orderInCategory="100"
        android:title="@string/toArtist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>