<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_to_playlist"
        android:orderInCategory="100"
        android:title="@string/addToPlayList"
        app:showAsAction="never" />
    <item
        android:id="@+id/go_to_album"
        android:orderInCategory="100"
        android:title="@string/toAlbum"
        app:showAsAction="never" />
    <item
        android:id="@+id/go_to_artist"
        android:orderInCategory="100"
        android:title="@string/toArtist"
        app:showAsAction="never" />
    <item
        android:id="@+id/details"
        android:orderInCategory="100"
        android:title="@string/details"
        app:showAsAction="never" />
</menu>